working on module 2

--- a/_output.yml
+++ b/_output.yml
@@ -1,6 +1,8 @@
 bookdown::gitbook:
   css: style.css
   toc_depth: 5
+  header_includes:
+    \usepackage{relsize}
   config:
     toc:
       before: |
