avance en optimizacion de temperatura de operacion

--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,7 @@ bookdown::gitbook:
   toc_depth: 5
   header_includes:
     \usepackage{relsize}
+    \usepackage{chemfig}
   config:
     toc:
       before: |
