--- a/_output.yml
+++ b/_output.yml
@@ -1,14 +1,16 @@
 bookdown::gitbook:
   css: style.css
   toc_depth: 5
-  header_includes:
-    \usepackage{relsize}
-    \usepackage{chemfig}
   config:
     toc:
       before: |
         <li><a href="./">Personal notes for Che5314</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    download: ["pdf", "epub"]
 
+bookdown::pdf_book:
+  latex_engine: xelatex
+  keep_tex: no
+  includes:
+    in_header: "preamble.tex"
+  
